modified:   10godinifirefox.html 	modified:   README.md

--- a/10godinifirefox.html
+++ b/10godinifirefox.html
@@ -592,7 +592,7 @@ people already with many more to come. You have an opportunity to have a
         </figure>
       <ul class="oneline demourl">
         <li>Новица Наков</li>
-        <li></li>
+        <li><a href="novica.github.io/10GodiniFirefox">novica.github.io/10GodiniFirefox</a></li>
         <li>Базирано на <a href="http://people.mozilla.com/%7Ebking/presentations/oscal2014/open.html">
           http://people.mozilla.com/~bking/presentations/oscal2014/open.html
         </a></li>
