--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ mode. Then use keys to navigate. <button onclick="goFullScreen()">Go fullscreen<
     https://people.mozilla.org/~bking/presentations/oscal2014/open.html">врска</a>.</p>
     <p class="abstract">
       <strong>Резиме: </strong>
-       Mozilla и светската заедница ја славата 10 годишнината на Firefox. Не е доцна и вие да се прикличите во изградбата на подобра мрежа.
+       Mozilla и светската заедница ја слават 10 годишнината на Firefox. Не е доцна и вие да се приклучите во изградбата на подобра мрежа.
     </p>
   </aside>
 
