--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@ communities.
   <div id="jungle" class="slide cover w"><div>
     <section>
       <header>
-        <h2>Искахирај патека</h2>
+        <h2>Исхакирај патека</h2>
       </header>
       <img src="10godini_files/jungle.jpg" alt="Reps" class="middle shadow">
       <small class="credits">
